--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,6 @@
   "version": "0.0.1",
   "minAppVersion": "0.15.0",
   "description": "Add professional layout components to Obsidian that look and feel native. Ginko Blocks includes tabs, columns, steps, cards, layouts and file trees. Full reset capability included.",
-  "authorUrl": "https://obsidian.md",
-  "fundingUrl": "https://obsidian.md/pricing",
+  "authorUrl": "https://www.lupinum.com",
   "isDesktopOnly": false
 }
