setup testing and new refactor plan

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
     "version": "node version-bump.mjs && git add manifest.json versions.json",
     "lint": "eslint .",
-    "lintfix": "eslint . --fix"
+    "lintfix": "eslint . --fix",
+    "test": "vitest",
+    "test:run": "vitest run"
   },
   "dependencies": {
     "@codemirror/language": "^6.10.8",
@@ -44,6 +46,8 @@
     "eslint": "^9.19.0",
     "obsidian": "latest",
     "tslib": "2.4.0",
-    "typescript": "5.7.2"
-  }
+    "typescript": "5.7.2",
+    "vitest": "^3.2.0"
+  },
+  "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
 }
